# templates_practice

./: .gitignore  CMakeLists.txt  README.md  headers.h
chapter1/: ch_1_function_templates.cpp  default_args_of_template_1.4.cpp  overload_function_template_1.5.cpp  summary.txt
chapter10/: Class_Template_or_Template_Class_10.1.cpp  summary.txt
chapter11/: Callables_11_1.cpp  Defer_Evaluations_11_5.cpp  Other_Utilities_to_Implement_Generic_Libraries_11_2.cpp  Perfect_Forwarding_Temporaries_11_3.cpp  References_as_Template_Parameters_11_4.cpp  Things_to_Consider_When_Writting_Generic_Libraries_11_6.cpp  summary.txt
chapter18/: Afternotes_18_7.cpp  Dynamic_Polymorphism_18_1.cpp  Dynamic_versus_Static_Polymorphism_18_3.cpp  Generic_Programming_18_6.cpp  New_Forms_of_Design_Patterns_18_5.cpp  Static_Polymorphism_18_2.cpp  Using_Concepts_18_4.cpp
chapter19/: An_Example_Accumulating_a_Sequence_19_1.cpp  Detecting_Members_19_6.cpp  In_the_Standard_Library_19_10.cpp  IsConvertibleT_19_5.cpp  Other_Traits_Techniques_19_7.cpp  Policy_Traits_19_9.cpp  SFINAE_Based_Traits_19_4.cpp  Traits_versus_Policies_and_Policy_Classes_19_2.cpp  Type_Classification_19_8.cpp  Type_Function_19_3.cpp  Type_Functions_19_3.cpp
chapter2/: decltype_for_class_template_2.9.cpp  default_template_args_2.7.cpp  partial_specialization_template_class_2.6.cpp  partially_use_class_template_2.3.cpp  specialization_template_class_2.5.cpp  summary.txt  template_stack_2.1.cpp  templatized_aggregates_2.10.cpp  type_aliases_2.8.cpp
chapter20/: Afternotes_20_7.cpp  Algorithm_Specialization_20_1.cpp  Class_Specialization_20_4.cpp  Enabling_Disabling_Function_Templates_20_3.cpp  In_the_Standard_Library_20_6.cpp  Instantiation_Safe_Templates_20_5.cpp  Tag_Dispatching_20_2.cpp
chapter21/: Mixins_21_3.cpp  Named_Template_Arguments_21_4.cpp  The_Curiously_Recurring_Template_Pattern_CRTP__21_2.cpp  The_Empty_Base_Class_Optimization_EBCO_21_1.cpp  note.txt
chapter22/: Bridge_Interface_22_3.cpp  Function_Objects_Pointers_and_std_function_22_1.cpp  Generalized_Function_Pointers_22_2.cpp  Optional_Bridging_22_5.cpp  Performance_Considerations_22_6_and_Afternotes_22_7.txt
chapter23/: Afternotes_23_7.cpp  Computational_Completeness_23_4.cpp  Enumeration_Values_versus_Static_Constants_23_6.cpp  Recursive_Instantiation_versus_Recursive_Template_Arguments_23_5.cpp  The_Cost_of_Recursive_Instantiation_23_3.cpp  The_Dimensions_of_Reflective_Meta_programming_23_2.cpp  The_State_of_Modern_C++_Meta_programmin_23_1.cpp
chapter24/: Anatomy_of_a_Typelist_24_1.cpp  Cons_style_Typelists_24_5.cpp  Nontype_Typelists_24_3.cpp  Optimizing_Algorithms_with_Pack_Expansions_24_4.cpp  Typelist_Algorithms_24_2.cpp
chapter25/: 25_5.cpp  Basic_Tuple_Design_25_1.cpp  Basic_Tuple_Operations_25_2.cpp  Tuple_Algorithms_25_3.cpp
chapter3/: Nontype_Function_Template_Parameters_3.2.cpp  Restrictions_for_Nontype_Template_Parameters_3.3.cpp  Template_Parameter_Type_auto_3.4.cpp  noneType_class_template_parameters_3.1.cpp  summary.txt
chapter4/: Application_of_Variadic_Templates_4.3.cpp  Variadic_Class_Templates_and_Variadic_Expressions _4.4.cpp  Variadic_Class_Templates_and_Variadic_Expressions_4.4.cpp  fold_experssions.cpp  fold_experssions_4.2.cpp  summary.txt  variadic_templates_4.1.cpp
chapter5/: Keyword_typename_5.1.cpp  Member_Templates_5.5.cpp  Template_Template_Parameters_5.7.cpp  Templates_for_Raw_Arrays_and_String_Literals_5.4.cpp  Using_this_operator_arrow_5.3.cpp  Variable_Templates_5.6.cpp  Zero_Initialization_5.2.cpp  summary.txt
chapter6/: Disable_templates_with_enable_if_6.3.cpp  Perfect_Forwarding_6.1.cpp  Special_Member_Function_Templates_6.2.cpp  Using_Concepts_to_Simplify_enable_if_6.5.cpp  Using_enable_if_6.4.cpp  summary.txt
chapter7/: Dealing_with_Return_Values_7.5.cpp  Dealing_with_String_Literals_and_Raw_Arrays_7.4.cpp  Passing_by_Reference_7.2.cpp  Passing_by_Value_7.1.cpp  Recommended_Template_Parameter_Declarations_7.6.cpp  Using_std_ref_and_std_cref_7.3.cpp  summary.txt
chapter8/: Computing_with_constexpr_8.2.cpp  Execution_Path_Selection_with_Partial_Specialization_8.3.cpp  SFINAE_Substitution_Failure_Is_Not_An_Error_8.4.cpp  Template_Meta_programming_8.1.cpp  compile_time_if_8.5.cpp  summary.txt
chapter9/: Afternotes_9.5.cpp  Decoding_the_Error_Novel_9.4.cpp  Precompiled_Headers_9.3.cpp  Templates_and_inline_9.2.cpp  The_Inclusion_Model_9.1.cpp  myfirst.cpp  myfirst.h  mysecond.h  summary.txt
